--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,11 @@
 [build]
   base    = ""
-  publish = "build"
   command = "npm run build"
+  publish = "build"
+
+[context.production]
+  environment = { NODE_ENV = "production" }
+
+[context.deploy-preview]
+  command = "npm install && npm run build"
+  publish = "build"
